--- a/main.html
+++ b/main.html
@@ -4,10 +4,32 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="grid-container">
+  <div id="1" class="grid-item"></div>
+  <div id="2" class="grid-item"></div>
+  <div id="3" class="grid-item"></div>
+  <div id="4" class="grid-item"></div>
+  <div id="5" class="grid-item"></div>
+  <div id="6" class="grid-item"></div>
+  <div id="7" class="grid-item"></div>
+  <div id="8" class="grid-item"></div>
+  <div id="9" class="grid-item"></div>
+</div>
+
+<label for="block_id">Block ID:</label>
+<input type="text" id="block_id"><br>
+
+<label for="color_id">Color:</label>
+<input type="text" id="color_id"><br>
+
+<button id="change_button">Change color</button>
+<button id="reset_button">Reset</button>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
